Consume the jsons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="">
   HELLO MAE
-  <button (click)="train();">Train</button>
+  <button (click)="getTrainJSON();">Train</button>
+  <button (click)="getTestJSON();">TEST</button>
 </div>
