--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
 <div class="">
   HELLO MAE
+  <button (click)="train();">Train</button>
   <button (click)="getTrainJSON();">Train</button>
   <button (click)="getTestJSON();">TEST</button>
+  <button (click)="binarizeOutput();">Binarize</button>
+  <button (click)="fillxTest();">fillxTest</button>
+  <button (click)="fillyTest();">fillyTest</button>
+  <button (click)="binarizeTestOutput();">BinarizeTrain</button>
+  <button (click)="binarizeTestInput();">BinarizeTest</button>
 </div>
