--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,3 @@
-<div class="">
-  HELLO MAE
-  <button (click)="train();">Train</button>
-  <button (click)="getTrainJSON();">Train</button>
-  <button (click)="getTestJSON();">TEST</button>
-  <button (click)="binarizeOutput();">Binarize</button>
-  <button (click)="fillxTest();">fillxTest</button>
-  <button (click)="fillyTest();">fillyTest</button>
-  <button (click)="binarizeTestOutput();">BinarizeTrain</button>
-  <button (click)="binarizeTestInput();">BinarizeTest</button>
+<div class="">    
+  <router-outlet></router-outlet>
 </div>
