--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 <p>
-  home works!
-  <cancer-form></cancer-form>
+  <cancer-form (formValue)="activateFormInputs($event);"></cancer-form>
+  {{ answer }}
 </p>
