Finish styling the main component

--- a/src/app/components/cancer-form/cancer-form.component.html
+++ b/src/app/components/cancer-form/cancer-form.component.html
@@ -1,6 +1,6 @@
 <div class="cancer-form">
-  <h1>Cancer form</h1>
-  <form #f="ngForm" (ngSubmit)="submitForm(f)" class="">
+  <div class="title">Cancer form</div>
+  <form #f="ngForm" (ngSubmit)="submitForm(f)" class="cancerForm">
     <input [(ngModel)]="cancerForm.cT" type="number" placeholder="Clump Thickness" name="cT">
     <input [(ngModel)]="cancerForm.uCSi" type="number" placeholder="Uniformity of Cell Size" name="uCSi">
     <input [(ngModel)]="cancerForm.uCSh" type="number" placeholder="Uniformity of Cell Shape" name="uCSh">
@@ -10,6 +10,6 @@
     <input [(ngModel)]="cancerForm.bC" type="number" placeholder="Bland Chromatin" name="bC">
     <input [(ngModel)]="cancerForm.nN" type="number" placeholder="Normal Nucleoli" name="nN">
     <input [(ngModel)]="cancerForm.m" type="number" placeholder="Mitoses" name="m">
-    <button type="submit" name="button">Go!</button>
+    <button type="submit" name="button" class="submit-button">Go!</button>
   </form>
 </div>
