--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,8 @@
-<p>
-  <cancer-form (formValue)="activateFormInputs($event);"></cancer-form>
-  {{ answer }}
-</p>
+<div class="home">
+  <div class="inside-container">
+    <cancer-form (formValue)="activateFormInputs($event);"></cancer-form>
+    <div class="cancer-animation">
+
+    </div>
+  </div>
+</div>
