--- a/src/app/components/cancer-form/cancer-form.component.css
+++ b/src/app/components/cancer-form/cancer-form.component.css
@@ -16,9 +16,8 @@
 .submit-button {
   border-style: solid;
   border-width: 0px 0px 3px;
-  box-shadow: 0 -1px 0 rgba(255, 255, 255, 0.1) inset;
+  box-shadow: 0 -1px 0 rgba(234,128,176,0.8) inset;
   color: #FFFFFF;
-  border-radius: 6px;
   cursor: pointer;
   display: inline-block;
   font-style: normal;
@@ -30,9 +29,7 @@
   white-space: nowrap;
   font-family: "Gotham Rounded A","Gotham Rounded B",Helvetica,Arial,sans-serif;
   font-weight: 700;
-  padding: 19px 39px 18px;
+  padding: 5px 10px;
   font-size: 18px;
-  background-color: #3498DB;
-	border-bottom: 5px solid #2980B9;
-	text-shadow: 0px -2px #2980B9;
+  background-color: rgba(234,128,176,1);
 }
