--- a/src/app/components/cancer-form/cancer-form.component.html
+++ b/src/app/components/cancer-form/cancer-form.component.html
@@ -1,15 +1,25 @@
 <div class="cancer-form">
-  <div class="title">Cancer form</div>
-  <form #f="ngForm" (ngSubmit)="submitForm(f)" class="cancerForm">
-    <input [(ngModel)]="cancerForm.cT" type="number" placeholder="Clump Thickness" name="cT">
-    <input [(ngModel)]="cancerForm.uCSi" type="number" placeholder="Uniformity of Cell Size" name="uCSi">
-    <input [(ngModel)]="cancerForm.uCSh" type="number" placeholder="Uniformity of Cell Shape" name="uCSh">
-    <input [(ngModel)]="cancerForm.mA" type="number" placeholder="Marginal Adhesion" name="mA">
-    <input [(ngModel)]="cancerForm.sECS" type="number" placeholder="Single Epithelial Cell Size" name="sECS">
-    <input [(ngModel)]="cancerForm.bN" type="number" placeholder="Bare Nuclei" name="bN">
-    <input [(ngModel)]="cancerForm.bC" type="number" placeholder="Bland Chromatin" name="bC">
-    <input [(ngModel)]="cancerForm.nN" type="number" placeholder="Normal Nucleoli" name="nN">
-    <input [(ngModel)]="cancerForm.m" type="number" placeholder="Mitoses" name="m">
-    <button type="submit" name="button" class="submit-button">Go!</button>
+  <div class="title">Ingrese sus datos</div>
+  <span style="color: white">Valores del 1 al 10 según su examen.</span>
+  <form #f="ngForm" (ngSubmit)="submitForm()" [formGroup]="cancerForm"  class="cancerForm">
+    <input [(ngModel)]="cancerForm.cT" type="number" [formControl]="cancerForm.controls['cT']"
+    placeholder="Espesor de macizo" name="cT">
+    <input [(ngModel)]="cancerForm.uCSi" type="number" [formControl]="cancerForm.controls['uCSi']"
+    placeholder="Uniformidad de tamaños de células" name="uCSi">
+    <input [(ngModel)]="cancerForm.uCSh" type="number" [formControl]="cancerForm.controls['uCSh']"
+    placeholder="Uniformidad de la forma de las células" name="uCSh">
+    <input [(ngModel)]="cancerForm.mA" type="number" [formControl]="cancerForm.controls['mA']"
+    placeholder="Adhesión marginal" name="mA">
+    <input [(ngModel)]="cancerForm.sECS" type="number" [formControl]="cancerForm.controls['sECS']"
+    placeholder="Tamaño de célula epitelial única" name="sECS">
+    <input [(ngModel)]="cancerForm.bN" type="number" [formControl]="cancerForm.controls['bN']"
+    placeholder="Núcleos desnudos" name="bN">
+    <input [(ngModel)]="cancerForm.bC" type="number" [formControl]="cancerForm.controls['bC']"
+    placeholder="Cromatina suave" name="bC">
+    <input [(ngModel)]="cancerForm.nN" type="number" [formControl]="cancerForm.controls['nN']"
+    placeholder="Normal Nucleoli" name="nN">
+    <input [(ngModel)]="cancerForm.m" type="number" [formControl]="cancerForm.controls['m']"
+    placeholder="Mitosis" name="m">
+    <button [disabled]="!cancerForm.valid" type="submit" name="button" class="submit-button">Go!</button>
   </form>
 </div>
