--- a/src/app/components/results/results.component.html
+++ b/src/app/components/results/results.component.html
@@ -11,5 +11,6 @@
     <span class="titulo">Resultados.</span>
     <span class="cancer">Cancer</span>
     <span class="no-cancer">No cancer</span>
+    <span class="resultado">Tu resultado</span>
   </div>
 </div>
