--- a/src/app/components/cancer-form/cancer-form.component.css
+++ b/src/app/components/cancer-form/cancer-form.component.css
@@ -1,11 +1,23 @@
 .cancer-form {
-  background-color: rgba(0,0,0,0.25);
-  padding: 10%;
+  background-color: white;
+  width: 750px;
+  height: auto;
 }
-
+md-card-header {
+  position: absolute;
+  width: 100%;
+  min-height: 5px;
+  top: 0;
+  left: 0;
+  background: #EA80B0;
+}
 .title {
-  font-size: 3em;
-  color: white;
+  font-size: 32px !important;
+  color: #FFFFFF;
+}
+.subtitle {
+  font-size: 18px !important;
+  color: #757575;
 }
 
 .cancerForm {
@@ -14,5 +26,24 @@
 }
 
 .submit-button[disabled] {
-  background-color: gray;
+  background-color: #9E9E9E;
+}
+
+md-card-content {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 50px 0px;
+}
+
+md-input-container {
+  margin: 0px 5px;
+  color: #212121;
+}
+
+md-card-actions {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
