--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,12 +1,13 @@
 .home{
   width: 100vw;
   height: 100vh;
-  background-image: url(/assets/images/hospital_background.jpg);
+  /*background-image: url(/assets/images/hospital_background.jpg);
   background-position: center;
-  background-size: cover;
-  -webkit-box-shadow: inset 0px -200px 189px 16px rgba(0,0,0,0.75);
+  background-size: cover;*/
+  background-color: white;
+  /*-webkit-box-shadow: inset 0px -200px 189px 16px rgba(0,0,0,0.75);
   -moz-box-shadow: inset 0px -200px 189px 16px rgba(0,0,0,0.75);
-  box-shadow: inset 0px -200px 189px 16px rgba(0,0,0,0.75);
+  box-shadow: inset 0px -200px 189px 16px rgba(0,0,0,0.75);*/
   display: flex;
   align-items: center;
   justify-content: center;
