--- a/src/styles.css
+++ b/src/styles.css
@@ -11,24 +11,26 @@ body {
     font-family: RubikRegular;
     src: url('assets/fonts/Rubik-Regular.ttf');
 }
-
+/deep/ .mat-input-underline {
+  border-color: #EA80B0 !important;
+}
 .submit-button {
-  border-style: solid;
+  /*border-style: solid;
   border-width: 0px 0px 3px;
   box-shadow: 0 -1px 0 rgba(234,128,176,0.8) inset;
-  color: #FFFFFF;
-  cursor: pointer;
   display: inline-block;
   font-style: normal;
   overflow: hidden;
   text-align: center;
   text-decoration: none;
   text-overflow: ellipsis;
-  transition: all 200ms ease-in-out 0s;
   white-space: nowrap;
   font-family: "Gotham Rounded A","Gotham Rounded B",Helvetica,Arial,sans-serif;
   font-weight: 700;
   padding: 5px 10px;
-  font-size: 18px;
-  background-color: rgba(234,128,176,1);
+  font-size: 18px;*/
+  background-color: #EA80B0;
+  color: #FFFFFF !important;
+  cursor: pointer;
+  transition: all 200ms ease-in-out 0s;
 }
