--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,6 @@
-.home{
+.home{  
   width: 100vw;
-  height: 100vh;
+  overflow-x: hidden;
   /*background-image: url(/assets/images/hospital_background.jpg);
   background-position: center;
   background-size: cover;*/
@@ -28,7 +28,7 @@
   height: 100%;
   background-color: rgba(234,128,176,0.25);
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: space-around;
 }
