--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,4 +1,4 @@
-.home{  
+.home{
   width: 100vw;
   overflow-x: hidden;
   /*background-image: url(/assets/images/hospital_background.jpg);
@@ -14,13 +14,17 @@
 }
 
 .description {
-  width: 50%;
-  background-color: rgba(0,0,0,0.25);
-  color: white;
+  /*width: 50%;  */
 }
 
 .description > .titulo {
-  font-size: 2em;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.description > .probabilidad {
+  font-size: 24px;
+  margin-bottom: 10px;
 }
 
 .inside-container {
@@ -31,4 +35,23 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
+}
+
+.result-container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.answered {
+  width: 300px;
+  background-color: white;
+  color: #212121;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
