--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,11 +3,14 @@
     Breast Cancer Analisis
   </div>
   <div class="buttons">
-    <div class="redo action">
+    <div *ngIf="toggleView" pageScroll pageScrollDuration=250 href="#body" class="redo action">
       Repetir prueba
     </div>
-    <div class="other action">
+    <div *ngIf="toggleView" pageScroll pageScrollDuration=250 href="#result" class="other action">
       Otros resultados
+    </div>
+    <div class="team action">
+      MaæSoft
     </div>
   </div>
 </div>
