--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 <div class="home">
   <div class="inside-container">
     <cancer-form class="vh-container" (formValue)="activateFormInputs($event);"></cancer-form>
-    <div [ngClass]="{ 'toggleView': toggleView }" class="result-container vh-container">
+    <div id="result" [ngClass]="{ 'toggleView': toggleView }" class="result-container vh-container">
       <md-card class="answered">
         <div class="description">
           <div class="titulo">
