--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,6 +16,6 @@
       </md-card>
       <results clas="vh-container" #resultsComponent [testingArray]="trainingSet"></results>
     </div>
-    <compare-result class="vh-container"></compare-result>
+    <!-- <compare-result class="vh-container"></compare-result> -->
   </div>
 </div>
