Made last change, needs pop at result

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <navbar [toggleView]="toggleView"></navbar>
 <div class="home">
   <div class="inside-container">
-    <cancer-form class="vh-container" (formValue)="activateFormInputs($event);"></cancer-form>
+    <cancer-form [ngClass]="{ 'hideView': toggleView }" class="vh-container" (formValue)="activateFormInputs($event);"></cancer-form>
     <div id="result" [ngClass]="{ 'toggleView': toggleView }" class="result-container vh-container">
       <md-card class="answered">
         <div class="description">
