Finish app, needs animation

--- a/src/app/components/cancer-form/cancer-form.component.html
+++ b/src/app/components/cancer-form/cancer-form.component.html
@@ -1,7 +1,8 @@
 <md-card class="cancer-form">
   <md-card-header>
-    <md-card-title class="title">Ingrese sus datos</md-card-title>
-    <md-card-subtitle class="subtitle">Valores del 1 al 10 según su examen.</md-card-subtitle>
+    <md-card-title class="title">Ingrese sus datos obtenidos en su prueba celular</md-card-title>
+    <md-card-subtitle class="subtitle">Los datos vienen de los resultados de su exmaen celular en la sección mamaria.
+      Valores del 1 al 10 según su examen.</md-card-subtitle>
   </md-card-header>
     <form #f="ngForm" (ngSubmit)="submitForm()" [formGroup]="cancerForm"  class="cancerForm">
       <md-card-content>
