--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,8 +2,8 @@
   <div class="logo">
     Breast Cancer Analisis
   </div>
-  <div class="buttons">    
-    <div class="team action">
+  <div class="buttons">
+    <div class="team action" (click)="alertTeam();">
       MaæSoft
     </div>
   </div>
