--- a/src/app/components/cancer-form/cancer-form.component.css
+++ b/src/app/components/cancer-form/cancer-form.component.css
@@ -10,13 +10,14 @@ md-card-header {
   top: 0;
   left: 0;
   background: #EA80B0;
+  margin-top: -4px !important;
 }
 .title {
   font-size: 32px !important;
   color: #FFFFFF;
 }
 .subtitle {
-  font-size: 18px !important;
+  font-size: 14px !important;
   color: #757575;
 }
 
