--- a/src/app/components/cancer-form/cancer-form.component.html
+++ b/src/app/components/cancer-form/cancer-form.component.html
@@ -1,6 +1,6 @@
-<md-card class="cancer-form">
+<md-card class="cancer-form animated bounceInUp">
   <md-card-header>
-    <md-card-title class="title">Ingrese sus datos obtenidos en su prueba celular</md-card-title>
+    <md-card-title class="title">Ingrese los datos obtenidos en su prueba</md-card-title>
     <md-card-subtitle class="subtitle">Los datos vienen de los resultados de su exmaen celular en la sección mamaria.
       Valores del 1 al 10 según su examen.</md-card-subtitle>
   </md-card-header>
