--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,10 +1,10 @@
 <div class="navbar">
   <div class="logo">
-    Breast Cancer Analisis
+    Breast Cancer Diagnose
   </div>
   <div class="buttons">
-    <div class="team action" (click)="alertTeam();">
-      MaæSoft
+    <div class="team action">
+      MæSoft
     </div>
   </div>
 </div>
