--- a/src/app/components/results/results.component.html
+++ b/src/app/components/results/results.component.html
@@ -1,4 +1,4 @@
-<md-card class="resultsContainer" *ngIf="arrayWithResults">
+<md-card class="resultsContainer animated bounceInDown" *ngIf="arrayWithResults">
   <div class="result animatedContainer" *ngFor="let result of arrayWithResults"
     [style.left.px]="result['x_position']"
     [style.bottom.px]="result['y_position']"
